Shopping list app added and Javascript file added

--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
 	<title>Here is a title</title>
 </head>
 <body>
+	<input id="userInput" type="text" placeholder="Type something...">
+	<button id="addBtn">Add Item</button>
+		<ul id="list">
+			<li>Apples</li>
+			<li>Tomatoes</li>
+			<li>Cucumber</li>
+			<li>Lettuce</li>
+		</ul>
 
+	<script type="text/javascript" src = "script.js"></script>
 </body>
 </html>
